Notebook: add git pull + background run + live progress monitor

--- a/notebooks/evojax_neat_both_runs.ipynb
+++ b/notebooks/evojax_neat_both_runs.ipynb
@@ -2,24 +2,25 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "id": "75615e97",
+      "id": "02719c1e",
       "metadata": {},
       "source": [
-        "# EvoJAX NEAT (Colab-Friendly)\n",
+        "# EvoJAX NEAT (Colab-Friendly, Live Progress)\n",
         "\n",
-        "This notebook clones your repo and runs both modes using the script:\n",
-        "- `scripts/run_evojax_neat_both.py`\n"
+        "This notebook clones/pulls the repo, runs both modes, and exposes real-time progress files."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "7d826870",
+      "id": "8a1a6f60",
       "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
         "import sys\n",
+        "import json\n",
+        "import time\n",
         "import subprocess\n",
         "from pathlib import Path\n",
         "\n",
@@ -29,6 +30,8 @@
         "\n",
         "if not REPO_DIR.exists():\n",
         "    subprocess.run(['git', 'clone', REPO_URL, str(REPO_DIR)], check=True)\n",
+        "else:\n",
+        "    subprocess.run(['git', '-C', str(REPO_DIR), 'pull'], check=True)\n",
         "\n",
         "SCRIPT_PATH = REPO_DIR / 'scripts' / 'run_evojax_neat_both.py'\n",
         "OUT_ROOT = REPO_DIR / 'artifacts'\n",
@@ -43,7 +46,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "80962a32",
+      "id": "c41acb5e",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -56,7 +59,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "29ec700d",
+      "id": "4571f043",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -70,7 +73,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "1dbd9cb9",
+      "id": "52b3b428",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -88,28 +91,108 @@
         "    '--episodes-direct', str(EPISODES_DIRECT),\n",
         "    '--episodes-selfplay', str(EPISODES_SELFPLAY),\n",
         "]\n",
-        "print('Running:', ' '.join(cmd))\n",
-        "subprocess.run(cmd, cwd=str(REPO_DIR), env=env, check=True)"
+        "\n",
+        "RUN_LOG = OUT_ROOT / f'run_launcher_{int(time.time())}.log'\n",
+        "run_log_f = open(RUN_LOG, 'w', encoding='utf-8')\n",
+        "print('Starting run in background...')\n",
+        "print('Command:', ' '.join(cmd))\n",
+        "print('Launcher log:', RUN_LOG)\n",
+        "\n",
+        "run_proc = subprocess.Popen(\n",
+        "    cmd,\n",
+        "    cwd=str(REPO_DIR),\n",
+        "    env=env,\n",
+        "    stdout=run_log_f,\n",
+        "    stderr=subprocess.STDOUT,\n",
+        "    text=True,\n",
+        ")\n",
+        "print('PID:', run_proc.pid)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "253c7254",
       "metadata": {},
       "outputs": [],
       "source": [
-        "from IPython.display import display, Markdown, Image\n",
-        "\n",
-        "def latest_dir(prefix: str) -> Path:\n",
+        "def latest_dir(prefix: str):\n",
         "    dirs = sorted(OUT_ROOT.glob(f'{prefix}_*'), key=lambda p: p.stat().st_mtime, reverse=True)\n",
-        "    if not dirs:\n",
-        "        raise RuntimeError(f'No artifact folder found for {prefix}')\n",
-        "    return dirs[0]\n",
+        "    return dirs[0] if dirs else None\n",
+        "\n",
+        "def print_live(prefix: str):\n",
+        "    d = latest_dir(prefix)\n",
+        "    if d is None:\n",
+        "        print(prefix, '-> waiting for run folder...')\n",
+        "        return\n",
+        "    print(f'{prefix} dir: {d}')\n",
+        "    pj = d / 'progress.json'\n",
+        "    if pj.exists():\n",
+        "        try:\n",
+        "            data = json.loads(pj.read_text())\n",
+        "            print(' progress:', data)\n",
+        "        except Exception as e:\n",
+        "            print(' progress parse error:', e)\n",
+        "    else:\n",
+        "        print(' progress: not created yet')\n",
+        "    hl = d / 'history_live.csv'\n",
+        "    if hl.exists():\n",
+        "        lines = hl.read_text().strip().splitlines()\n",
+        "        if lines:\n",
+        "            print(' history_live last line:', lines[-1])\n",
+        "    sl = d / 'species_sizes_live.csv'\n",
+        "    if sl.exists():\n",
+        "        lines = sl.read_text().strip().splitlines()\n",
+        "        if lines:\n",
+        "            print(' species_live last line:', lines[-1])\n",
+        "\n",
+        "print('Monitoring every 30s. Stop this cell manually if needed.')\n",
+        "while run_proc.poll() is None:\n",
+        "    print('\\n' + '=' * 100)\n",
+        "    print('time:', time.strftime('%Y-%m-%d %H:%M:%S'))\n",
+        "    print('process running, pid=', run_proc.pid)\n",
+        "    print_live('direct_vs_builtin')\n",
+        "    print_live('selfplay_then_builtin')\n",
+        "    if RUN_LOG.exists():\n",
+        "        tail = RUN_LOG.read_text(encoding='utf-8', errors='ignore').splitlines()[-10:]\n",
+        "        print('--- launcher log tail ---')\n",
+        "        for line in tail:\n",
+        "            print(line)\n",
+        "    time.sleep(30)\n",
+        "\n",
+        "print('\\nProcess finished with code:', run_proc.returncode)\n",
+        "run_log_f.close()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c67a22f0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "if run_proc.poll() is None:\n",
+        "    raise RuntimeError('Process still running. Keep monitor cell running or wait longer.')\n",
+        "if run_proc.returncode != 0:\n",
+        "    tail = RUN_LOG.read_text(encoding='utf-8', errors='ignore').splitlines()[-80:]\n",
+        "    print('\\n'.join(tail))\n",
+        "    raise RuntimeError(f'Run failed with code {run_proc.returncode}')\n",
         "\n",
         "direct_dir = latest_dir('direct_vs_builtin')\n",
         "selfplay_dir = latest_dir('selfplay_then_builtin')\n",
         "print('direct_dir  =', direct_dir)\n",
         "print('selfplay_dir=', selfplay_dir)\n",
+        "print('launcher log=', RUN_LOG)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b7ecd46a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from IPython.display import display, Markdown, Image\n",
         "\n",
         "def show_img(path: Path, width=700):\n",
         "    if path.exists():\n",
