Notebook: local-first paths and live progress monitoring

--- a/notebooks/evojax_neat_both_runs.ipynb
+++ b/notebooks/evojax_neat_both_runs.ipynb
@@ -2,18 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "id": "02719c1e",
+      "id": "bf63e69d",
       "metadata": {},
       "source": [
-        "# EvoJAX NEAT (Colab-Friendly, Live Progress)\n",
+        "# EvoJAX NEAT (Local-First, Live Progress)\n",
         "\n",
-        "This notebook clones/pulls the repo, runs both modes, and exposes real-time progress files."
+        "Default behavior is your local machine path. Colab clone is only fallback."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "8a1a6f60",
+      "id": "d05cdf27",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -24,14 +24,20 @@
         "import subprocess\n",
         "from pathlib import Path\n",
         "\n",
+        "LOCAL_REPO_DIR = Path('/Users/aryangoyal/Documents/New project').resolve()\n",
         "REPO_URL = 'https://github.com/aryangoyal7/NEAT-Sakana.git'\n",
-        "WORKDIR = Path('/content') if Path('/content').exists() else Path.cwd()\n",
-        "REPO_DIR = WORKDIR / 'NEAT-Sakana'\n",
         "\n",
-        "if not REPO_DIR.exists():\n",
-        "    subprocess.run(['git', 'clone', REPO_URL, str(REPO_DIR)], check=True)\n",
+        "if LOCAL_REPO_DIR.exists() and (LOCAL_REPO_DIR / 'pyproject.toml').exists():\n",
+        "    REPO_DIR = LOCAL_REPO_DIR\n",
+        "    print('Using local repo:', REPO_DIR)\n",
+        "    subprocess.run(['git', '-C', str(REPO_DIR), 'pull'], check=False)\n",
         "else:\n",
-        "    subprocess.run(['git', '-C', str(REPO_DIR), 'pull'], check=True)\n",
+        "    WORKDIR = Path('/content') if Path('/content').exists() else Path.cwd()\n",
+        "    REPO_DIR = WORKDIR / 'NEAT-Sakana'\n",
+        "    if not REPO_DIR.exists():\n",
+        "        subprocess.run(['git', 'clone', REPO_URL, str(REPO_DIR)], check=True)\n",
+        "    else:\n",
+        "        subprocess.run(['git', '-C', str(REPO_DIR), 'pull'], check=True)\n",
         "\n",
         "SCRIPT_PATH = REPO_DIR / 'scripts' / 'run_evojax_neat_both.py'\n",
         "OUT_ROOT = REPO_DIR / 'artifacts'\n",
@@ -40,13 +46,14 @@
         "print('Kernel python:', sys.executable)\n",
         "print('REPO_DIR    :', REPO_DIR)\n",
         "print('SCRIPT_PATH :', SCRIPT_PATH)\n",
-        "print('OUT_ROOT    :', OUT_ROOT)"
+        "print('OUT_ROOT    :', OUT_ROOT)\n",
+        "print('\\nReal-time files are saved under:', OUT_ROOT)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "c41acb5e",
+      "id": "82a005f8",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +66,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "4571f043",
+      "id": "3896af6f",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -73,7 +80,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "52b3b428",
+      "id": "b03e764f",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -112,7 +119,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "253c7254",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -167,7 +173,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "c67a22f0",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -188,7 +193,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "b7ecd46a",
       "metadata": {},
       "outputs": [],
       "source": [
